--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "marat555/youtube",
   "description": "Laravel PHP Facade/Wrapper for the Eventbrite Data API v3",
   "keywords": ["eventbrite", "api", "event", "laravel", "marat555"],
+  "homepage": "https://github.com/Marat555/eventbrite-api-laravel-wrapper",
   "license": "MIT",
   "authors": [
     {
@@ -10,10 +11,14 @@
     }
   ],
   "require": {
-    "php": "^7.0"
+    "illuminate/support": "^5.1",
+    "php": "^7.0",
+    "guzzlehttp/guzzle": "^6.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.1"
+    "phpunit/phpunit": "^6.1",
+    "scrutinizer/ocular": "^1.1",
+    "squizlabs/php_codesniffer": "^2.3"
   },
   "autoload": {
     "psr-4": {
