--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "marat555/youtube",
+  "name": "marat555/eventbrite",
   "description": "Laravel PHP Facade/Wrapper for the Eventbrite Data API v3",
   "keywords": ["eventbrite", "api", "event", "laravel", "marat555"],
   "homepage": "https://github.com/Marat555/eventbrite-api-laravel-wrapper",
