--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require": {
     "illuminate/support": "^5.1",
     "php": "^7.0",
-    "guzzlehttp/guzzle": "^6.0"
+    "guzzlehttp/guzzle": "^6.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.1",
